<resources>
    <string name="preferences_alerts_custom_snooze_delay_title">Ask for reminder snooze delay</string>
    <string name="preferences_alerts_custom_snooze_delay_summary_on">Ask for snooze delay whenever snoozing reminders</string>
    <string name="preferences_alerts_custom_snooze_delay_summary_off">Always use default snooze delay</string>
    <string name="snooze_delay_dialog_title">Set snooze delay</string>
    <string name="preferences_default_snooze_delay_title">Default snooze delay time</string>
    <string name="preferences_default_snooze_delay_dialog">Default snooze delay</string>
    <string name="preferences_default_snooze_delay_default">5</string>
    <string name="default_start_title">Default view</string>
    <string name="default_start_last">Previously used view</string>
    <string name="events_delete">Delete events</string>
    <string name="action_select_all">Select all</string>
    <string name="action_select_none">Deselect all</string>
    <string name="action_delete">Done</string>
    <string name="all_events">All events</string>
    <string name="no_events">No events available</string>
    <string name="evt_del_dlg_title">Delete events?</string>
    <string name="evt_del_dlg_msg_selected">Selected events will be deleted</string>
    <string name="evt_del_dlg_msg_all">All events will be deleted</string>
    <string name="no_events_selected">No events selected</string>
    <string name="go_to">Go to</string>
    <string name="cal_share_intent_title">Send event to:</string>
    <string name="cal_export_event_sdcard_title">Export to SD card</string>
    <string name="cal_export_succ_msg">Event exported successfully: %1s</string>
    <string name="cal_import_menu_title">Import event</string>
    <string name="cal_nothing_to_import">Nothing to import</string>
    <string name="cal_import_error_msg">Importing to calendar failed</string>
    <string name="cal_pick_ics">Pick file to import</string>
    <string name="error_generating_ics">Problems encountered while sharing event</string>
    <string name="share_label">Share</string>
    <string name="app_label">Calendar</string>
    <string name="what_label">What</string>
    <string name="where_label">Where</string>
    <string name="when_label">When</string>
    <string name="timezone_label">Time zone</string>
    <string name="attendees_label">Guests</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">Today at %s</string>
    <string name="tomorrow_at_time_fmt">Tomorrow at %s</string>
    <string name="date_time_fmt" formatted="false">%s, %s</string>
    <string name="repeats_label">Repetition</string>
    <string name="no_title_label">(No title)</string>
    <string name="calendar_refresh">Refresh</string>
    <string name="show_day_view">Show day</string>
    <string name="agenda_view">Agenda</string>
    <string name="day_view">Day</string>
    <string name="week_view">Week</string>
    <string name="month_view">Month</string>
    <string name="event_view">View event</string>
    <string name="event_create">New event</string>
    <string name="event_edit">Edit event</string>
    <string name="event_delete">Delete event</string>
    <string name="goto_today">Today</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_select_visible_calendars">Calendars to display</string>
    <string name="search">Search</string>
    <string name="hide_controls">Hide controls</string>
    <string name="show_controls">Show controls</string>
    <string name="select_visible_calendars_title">Calendars to display</string>
    <string name="synced">synced</string>
    <string name="not_synced">not synced</string>
    <string name="acct_not_synced">"This account isn't being synced so your calendars may not be up-to-date."</string>
    <string name="accounts">Accounts &amp; sync</string>
    <string name="select_synced_calendars_title">Calendars to sync</string>
    <string name="select_synced_calendars_button">Calendars to sync</string>
    <string name="hint_what">Event name</string>
    <string name="hint_where">Location</string>
    <string name="hint_description">Description</string>
    <string name="hint_attendees">Guests</string>
    <string name="creating_event">Event created.</string>
    <string name="saving_event">Event saved.</string>
    <string name="empty_event">Empty event not created.</string>
    <string name="creating_event_with_guest">Invitations will be sent.</string>
    <string name="saving_event_with_guest">Updates will be sent.</string>
    <string name="rsvp_accepted">Responded yes.</string>
    <string name="rsvp_tentative">Responded maybe.</string>
    <string name="rsvp_declined">Responded no.</string>
    <string name="create_event_dialog_save">Save</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="edit_event_to_label">To</string>
    <string name="edit_event_from_label">From</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="edit_event_show_all">Show all</string>
    <string name="description_label">Description</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Add reminder</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">Before you can add an event, you must add at least one Calendar account to your device and make a calendar visible. Touch Add Account to add an account (if you just added an account, wait for it to finish syncing and try again). Or touch Cancel and make sure at least one calendar is visible.</string>
    <string name="create_an_account_desc">"Calendar works better with a Google Account.

• Access it from any web browser
• Back up your events securely"</string>
    <string name="add_account">Add account</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="choose_event_color_label">Choose event color</string>
    <string name="event_color_picker_dialog_title">Event Color</string>
    <string name="event_color_set_to_default">Set to default calendar color</string>
    <string name="calendar_color_picker_dialog_title">Calendar Color</string>
    <string name="calendar_square_color_picker_description">Color picker</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="response_yes">Yes</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="email_guests_label">Email guests</string>
    <string name="email_organizer_label">Email organizer</string>
    <string name="email_picker_label">Email with</string>
    <string name="email_subject_prefix">"Re: "</string>
    <string name="event_not_found">Event not found.</string>
    <string name="map_label">Map</string>
    <string name="call_label">Call</string>
    <string name="quick_response_settings">Quick responses</string>
    <string name="quick_response_settings_summary">Edit default responses when emailing guests</string>
    <string name="quick_response_settings_title">Edit quick responses</string>
    <string name="quick_response_settings_edit_title">Quick response</string>
    <string name="quick_response_dialog_title">Choose quick response</string>
    <string name="quick_response_email_failed">Failed to find an email program</string>
    <string name="quick_response_custom_msg">Write your own…</string>
    <string name="event_info_organizer">Organizer:</string>
    <string name="event_info_reminders_label">Reminders</string>
    <string name="agenda_today">TODAY, %1$s</string>
    <string name="agenda_yesterday">YESTERDAY, %1$s</string>
    <string name="agenda_tomorrow">TOMORROW, %1$s</string>
    <string name="loading">Loading…</string>
    <string name="show_older_events">Touch to view events before %1$s</string>
    <string name="show_newer_events">Touch to view events after %1$s</string>
    <string name="search_title">Search my calendars</string>
    <string name="edit_event_label">Details</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Cancel</string>
    <string name="snooze_all_label">Snooze all</string>
    <string name="dismiss_all_label">Dismiss all</string>
    <string name="snooze_label">Snooze</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="endByDate">; until %s</string>
    <string name="every_weekday">Every weekday (Mon–Fri)</string>
    <string name="monthly">Monthly</string>
    <string name="yearly_plain">Yearly</string>
    <string name="monthly_on_day">Monthly (on day %s)</string>
    <string name="yearly">Yearly (on %s)</string>
    <string name="custom">"Custom (can't customize on phone)"</string>
    <string name="modify_event">Change only this event</string>
    <string name="modify_all">Change all events in the series</string>
    <string name="modify_all_following">Change this and all future events</string>
    <string name="new_event_dialog_label">New event</string>
    <string name="new_event_dialog_option">New event</string>
    <string name="delete_this_event_title">Delete this event?</string>
    <string name="delete_recurring_event_title">Delete %s?</string>
    <string name="change_response_title">Change response</string>
    <string name="menu_general_preferences">General settings</string>
    <string name="menu_about_preferences">About Calendar</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_reminder_title">Notifications &amp; reminders</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_default">-1</string>
    <string name="preferences_clear_search_history_title">Clear search history</string>
    <string name="preferences_clear_search_history_summary">"Remove all the searches you've performed"</string>
    <string name="search_history_cleared">Search history cleared.</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="prefDefault_alerts_vibrate_true">always</string>
    <string name="preferences_alerts_ringtone_title">Sound</string>
    <string name="preferences_alerts_popup_title">Pop-up notification</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_default">10</string>
    <string name="preferences_use_home_tz_title">Use home time zone</string>
    <string name="preferences_use_home_tz_descrip">Displays calendars and event times in your home time zone when traveling</string>
    <string name="preferences_home_tz_title">Home time zone</string>
    <string name="preferences_home_tz_default">America/Los_Angeles</string>
    <string name="preferences_show_week_num_title">Show week number</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_build_version">Build version</string>
    <string name="gadget_title">Calendar</string>
    <string name="accessibility_add_reminder">Add reminder</string>
</resources>