<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_action_share" android:id="@id/info_action_share_event" android:title="@string/share_label" android:alphabeticShortcut="s" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_colorpicker_holo_light" android:enabled="false" android:id="@id/info_action_change_color" android:visible="false" android:title="@string/choose_event_color_label" android:alphabeticShortcut="c" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_compose_holo_light" android:enabled="false" android:id="@id/info_action_edit" android:visible="false" android:title="@string/edit_label" android:alphabeticShortcut="e" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:enabled="false" android:id="@id/info_action_delete" android:visible="false" android:title="@string/delete_label" android:alphabeticShortcut="d" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_export" android:enabled="true" android:id="@id/info_action_export" android:visible="true" android:title="@string/cal_export_event_sdcard_title" android:alphabeticShortcut="x" android:showAsAction="always" />
</menu>