<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#fffafafa" android:padding="@dimen/event_info_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/event_info_loading_msg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/event_info_progress_bar" android:layout_width="100.0dip" android:layout_height="100.0dip" android:indeterminate="true" android:layout_centerInParent="true" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/loading" android:layout_below="@id/event_info_progress_bar" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView android:gravity="center" android:id="@id/event_info_error_msg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/event_not_found" />
    <ScrollView android:orientation="vertical" android:id="@id/event_info_scroll_view" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include layout="@layout/event_info_headline" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <LinearLayout android:orientation="horizontal" android:id="@id/calendar_container" android:paddingRight="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0sp" android:textColor="@color/event_info_organizer_color" android:id="@id/calendar_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_event_calendar_label" android:singleLine="true" style="?android:attr/textAppearanceSmall" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/event_info_organizer_color" android:ellipsize="end" android:id="@id/calendar_name" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:singleLine="true" android:layout_weight="1.0" android:textIsSelectable="true" style="?android:attr/textAppearanceSmall" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/organizer_container" android:paddingRight="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0sp" android:textColor="@color/event_info_organizer_color" android:id="@id/organizer_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/event_info_organizer" android:singleLine="true" style="?android:attr/textAppearanceSmall" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/event_info_organizer_color" android:ellipsize="end" android:id="@id/organizer" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:singleLine="true" android:layout_weight="1.0" android:textIsSelectable="true" style="?android:attr/textAppearanceSmall" />
                </LinearLayout>
                <include android:id="@id/description" layout="@layout/expandable_textview" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/response_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/event_info_label_color" android:layout_gravity="center_vertical" android:id="@id/response_label" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/view_event_response_label" style="?android:attr/listSeparatorTextViewStyle" />
                <RadioGroup android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/response_value" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="52.0dip">
                    <RadioButton android:textColor="@color/event_info_body_color" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/response_yes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/response_yes" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
                    <RadioButton android:textColor="@color/event_info_body_color" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/response_maybe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/response_maybe" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
                    <RadioButton android:textColor="@color/event_info_body_color" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/response_no" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/response_no" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/email_attendees_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" />
                <Button android:textSize="16.0sp" android:textColor="#ff777777" android:gravity="center_vertical" android:id="@id/email_attendees_button" android:background="?android:selectableItemBackground" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="6.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="0.0dip" android:text="@string/email_guests_label" android:drawableLeft="@drawable/event_info_mail_button" android:drawablePadding="8.0dip" android:textAllCaps="false" style="@style/TextAppearance.EditEvent_LabelSmall" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/launch_custom_app_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" />
                <Button android:textSize="16.0sp" android:textColor="#ff777777" android:gravity="center_vertical" android:id="@id/launch_custom_app_button" android:background="?android:selectableItemBackground" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="6.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="0.0dip" android:drawablePadding="8.0dip" android:textAllCaps="false" style="@style/TextAppearance.EditEvent_LabelSmall" />
            </LinearLayout>
            <com.android.calendar.event.AttendeesView android:textColor="@color/event_info_body_color" android:orientation="vertical" android:id="@id/long_attendee_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/event_info_label_color" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="0.0dip" android:text="@string/event_info_reminders_label" style="?android:attr/listSeparatorTextViewStyle" />
            <LinearLayout android:orientation="vertical" android:id="@id/reminder_items_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="-8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="4.0dip" />
            <Button android:textSize="18.0sp" android:textColor="#ff777777" android:gravity="top" android:layout_gravity="center_vertical" android:id="@id/reminder_add" android:background="?android:selectableItemBackground" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="0.0dip" android:minHeight="20.0dip" android:text="@string/reminders_label" android:contentDescription="@string/accessibility_add_reminder" android:textAllCaps="false" style="@style/TextAppearance.EditEvent_LabelSmall" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>